--- a/src/app/components/vault-list/vault-list.component.html
+++ b/src/app/components/vault-list/vault-list.component.html
@@ -8,28 +8,28 @@
         <mat-card-content>
 
             <mat-card *ngFor="let vault of vaults" class="vault-card">
+
                 <mat-card-header *ngIf="vault.token2 != ''" class="double-token">
                     <img mat-card-avatar src='{{ "../../../assets/" + vault.img + ".png" }}' width="40" height="40" alt="USDC" class="token-icon overlay">
                     <img mat-card-avatar *ngIf="vault.img2 != ''" src='{{ "../../../assets/" + vault.img2 + ".png" }}' width="40" height="40" alt="USDC" class="token-icon underlay">
-                    
-                    <mat-card-title>{{ vault.token1 }} {{ vault.token2 }}</mat-card-title>
+                    <mat-card-title>
+                        {{ vault.token1 }} {{ vault.token2 }}
+                    </mat-card-title>
                     <mat-card-subtitle>{{ vault.network }}</mat-card-subtitle>
-
-
-                    
+                    <a routerLink='{{ "/vaults/" + vault.id }}' routerLinkActive="inactive" ariaCurrentWhenActive="page">
+                        <mat-icon aria-hidden="false" aria-label="go" fontIcon="east"></mat-icon>
+                    </a>
                 </mat-card-header>
+
                 <mat-card-header *ngIf="vault.img2 == ''">
                     <img mat-card-avatar src='{{ "../../../assets/" + vault.img + ".png" }}' width="40" height="40" alt="USDC" class="token-icon overlay">
                     <mat-card-title>{{ vault.token1 }}</mat-card-title>
                     <mat-card-subtitle>{{ vault.network }}</mat-card-subtitle>
-
-
-
+                    <a routerLink='{{ "/vaults/" + vault.id }}' routerLinkActive="inactive" ariaCurrentWhenActive="page">
+                        <mat-icon aria-hidden="false" aria-label="go" fontIcon="east"></mat-icon>
+                    </a>
                 </mat-card-header>
 
-
-
-    
                 <mat-card-content>
                     <div class="vertical-align">
                         <mat-icon aria-hidden="false" aria-label="percent-icon" fontIcon="percent"></mat-icon>
