--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div id="home" class="flexbox-parent">
     <div id="home-heading">zurik</div>
-    <div id="home-subheading">The income-focused asset manager of the web3 future</div>
+    <div id="home-subheading">The decentralized asset manager of the web3 future</div>
     <mat-form-field id="newsletter-input" layout-align="center center">
         <mat-label>Stay in touch</mat-label>
         <input #ensInput matInput placeholder="ENS">
