add additional styling

--- a/src/app/components/user-wallet/user-wallet.component.html
+++ b/src/app/components/user-wallet/user-wallet.component.html
@@ -72,6 +72,26 @@
                 </mat-card-content>
             </mat-card>
 
+            <mat-card class="token-card asset-card">
+                <mat-card-header>
+                    <img mat-card-avatar src='{{ "../../../assets/eth.png" }}' width="40" height="40" alt="eth" class="token-icon">
+                    <mat-card-title>ETH - Arbitrum</mat-card-title>
+                    <mat-card-subtitle>21.02% Current Yield</mat-card-subtitle>
+                  </mat-card-header>
+    
+                <mat-card-content>
+
+                    <span>
+                        2.762 ETH 
+                    </span>
+
+                    <span class="green-text">
+                        + 2,186 USDC Optimized Loan
+                    </span>
+
+                </mat-card-content>
+            </mat-card>
+
         </mat-card-content>
     </mat-card>
 </div>
