--- a/src/app/components/vault/vault.component.scss
+++ b/src/app/components/vault/vault.component.scss
@@ -30,7 +30,8 @@ mat-chip {
 }
 
 .selected-chip {
-    background-color: green;
+    background-color: #df3939;
+    color: white;
 }
 
 mat-card-header mat-icon {
