--- a/src/app/components/asset-manager/asset-manager.component.scss
+++ b/src/app/components/asset-manager/asset-manager.component.scss
@@ -1,5 +1,5 @@
 .deposit-field {
-    width: 200px;
+    width: 300px;
     margin-right: 20px;
     margin-left: 10px;
     text-align: center;
@@ -7,4 +7,20 @@
 
 .pool-select {
     margin-left: 10px;
+    width: 400px;
 }
+
+.title-row {
+    height: 80px;
+    text-align: center;
+    margin-top: 10px;   
+}
+
+#yield-research-card {
+    margin: 10px;
+}
+
+#yield-research-card > h3 {
+    text-align: center;
+}
+
