--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   <li class="no-bullet"><a routerLink="/vaults" routerLinkActive="active-route" ariaCurrentWhenActive="page">vaults</a></li>
 
   <span class="right-spacer"></span>
-  <button mat-raised-button color="warn" style="color: grey;">Connect Wallet</button>
+  <button mat-raised-button color="warn" style="color: grey;" (click)="openMetamask()">Connect Wallet</button>
 </mat-toolbar>
 
 <div id="particles-js"></div>
