add web3 wallet connection support

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,8 @@
   <li class="no-bullet"><a routerLink="/vaults" routerLinkActive="active-route" ariaCurrentWhenActive="page">vaults</a></li>
 
   <span class="right-spacer"></span>
-  <button mat-raised-button color="warn" style="color: grey;" (click)="openMetamask()">Connect Wallet</button>
+  <button *ngIf="!walletConnected()" mat-raised-button color="warn" style="color: grey;" (click)="openMetamask()">Connect Wallet</button>
+  <button *ngIf="walletConnected()" mat-raised-button color="warn" style="color: grey;" (click)="openMetamask()">{{ shortAddress() }}</button>
 </mat-toolbar>
 
 <div id="particles-js"></div>
