add homepage introduction

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,15 +8,19 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <mat-toolbar color="primary" class="header">
-  <a routerLink="/" routerLinkActive="inactive" ariaCurrentWhenActive="page" id="icon-slot">zurik</a>
+  <a routerLink="/" routerLinkActive="inactive" ariaCurrentWhenActive="page" id="icon-slot">
+    <img src="../../assets/logo_wide.png" width="190px" style="margin-top:20px;" />
+  </a>
+  <span class="large-spacer"></span>
+  <li class="no-bullet"><a routerLink="#product" routerLinkActive="active-route" ariaCurrentWhenActive="page">product</a></li>
   <span class="spacer"></span>
-  <li class="no-bullet"><a routerLink="/assets" routerLinkActive="active-route" ariaCurrentWhenActive="page">assets</a></li>
+  <li class="no-bullet"><a routerLink="#community" routerLinkActive="active-route" ariaCurrentWhenActive="page">community</a></li>
   <span class="spacer"></span>
-  <li class="no-bullet"><a routerLink="/vaults" routerLinkActive="active-route" ariaCurrentWhenActive="page">vaults</a></li>
+  <li class="no-bullet"><a routerLink="#developers" routerLinkActive="active-route" ariaCurrentWhenActive="page">developers</a></li>
 
   <span class="right-spacer"></span>
-  <button *ngIf="!walletConnected()" mat-raised-button color="warn" style="color: grey;" (click)="openMetamask()">Connect Wallet</button>
-  <button *ngIf="walletConnected()" mat-raised-button color="warn" style="color: grey;" (click)="openMetamask()">{{ shortAddress() }}</button>
+  <button *ngIf="!walletConnected()" mat-raised-button color="primary" style="color: white;" (click)="openMetamask()">Connect Wallet</button>
+  <button *ngIf="walletConnected()" mat-raised-button color="primary" style="color: white;" (click)="openMetamask()">{{ shortAddress() }}</button>
 </mat-toolbar>
 
 <div id="particles-js"></div>
