--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,27 @@
 <div id="home" class="flexbox-parent">
-    <div id="home-heading">zurik</div>
-    <div id="home-subheading">The decentralized asset manager of the web3 future</div>
-    <mat-form-field id="newsletter-input" layout-align="center center">
-        <mat-label>Stay in touch</mat-label>
-        <input #ensInput matInput placeholder="ENS">
-    </mat-form-field>
+    <div id="intro">
+        <div id="home-heading">Automated DeFi Yield Strategies</div>
+        <div id="home-subheading">Asset management vaults which automatically capture the highest yields on a risk adjusted basis across decentralized protocols.</div>
+        <button mat-raised-button color="primary" id="launch-app">Launch App</button>
+    </div>
+    <div id="tenets">
+        <h2 id="tenets-heading">core tenets</h2>
+        <div class="tenet">
+            <h4>trustless</h4>
+            <p>Asset strategies which do not require the trust in centralized oracles or investment managers.</p>
+        </div>
+        <div class="tenet">
+            <h4>composable</h4>
+            <p>Elegant contract interactions to make treasury automation and the creation of inhereting protocols a joy.</p>
+        </div>
+        <div class="tenet">
+            <h4>decentralization</h4>
+            <p>Events sourced from un-permissioned analyst users provides market efficiencies with decentralized control.</p>
+        </div>
+        <div class="tenet">
+            <h4>stakeholder governance</h4>
+            <p>Risk and reward parameters set by depositors, providing maximum safety from governance manipulation.</p>
+        </div>
+    </div>
+
 </div>
