--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,15 +1,16 @@
 #home-heading {
-    color: #B62020;
-    font-size: 48px;
-    font-style: italic;
-    text-align: center;
+    color: white;
+    font-size: 36px;
+    text-align: left;
 }
 
 #home-subheading {
-    margin-top: 20px;
-    color: #B62020;
-    font-size: 22px;
+    margin-top: 40px;
+    color: white;
+    font-size: 18px;
     text-align: center;
+    width: 600px;
+    margin-bottom: 70px;
 }
 
 #home {
@@ -24,7 +25,7 @@
     margin-top: 20px;
     align-content: center;
     text-align: center;
-    color: #B62020;
+    color: #39FF14;
 }
 
 .placeholder {
@@ -33,4 +34,31 @@
 
 .mat-input-element::data-placeholder{
     color: #B62020;
- }
+}
+
+#launch-app {
+    margin-left: 40%;
+    width: 20%;
+    color: white;
+}
+
+#tenets {
+    margin-top: 200px;
+    width: 60%;
+    color: white;
+}
+
+#tenets-heading {
+    color: #39FF14;
+
+}
+
+.tenet {
+    width: 49%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.tenet > h4 {
+    text-decoration: underline;
+}
