fix verbiage on homepage

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,19 +8,19 @@
         <h2 id="tenets-heading">core tenets</h2>
         <div class="tenet">
             <h4>trustless</h4>
-            <p>Asset strategies which do not require the trust in centralized oracles or investment managers.</p>
+            <p>Asset strategies which do not require users to trust in centralized oracles or investment managers.</p>
         </div>
         <div class="tenet">
             <h4>composable</h4>
-            <p>Elegant contract interactions to make treasury automation and the creation of inhereting protocols a joy.</p>
+            <p>Elegant contract interactions to make treasury automation and the creation of protocol users a joy.</p>
         </div>
         <div class="tenet">
             <h4>decentralization</h4>
-            <p>Events sourced from un-permissioned analyst users provides market efficiencies with decentralized control.</p>
+            <p>Events sourced from un-permissioned analyst users to provide market efficiencies with decentralized control.</p>
         </div>
         <div class="tenet">
             <h4>stakeholder governance</h4>
-            <p>Risk and reward parameters set by depositors, providing maximum safety from governance manipulation.</p>
+            <p>Risk and reward parameters set by depositors to provide maximum safety from governance manipulation.</p>
         </div>
     </div>
 
