fix formatting on intro

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div id="intro">
         <div id="home-heading">Automated DeFi Yield Strategies</div>
         <div id="home-subheading">Asset management vaults which automatically capture the highest yields on a risk adjusted basis across decentralized protocols.</div>
-        <button mat-raised-button color="primary" id="launch-app">Launch App</button>
+        <button mat-raised-button color="primary" id="launch-app" disabled>Launch App</button>
     </div>
     <div id="tenets">
         <h2 id="tenets-heading">core tenets</h2>
