--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -54,9 +54,11 @@
 }
 
 .tenet {
-    width: 49%;
+    width: 42%;
     display: inline-block;
     vertical-align: top;
+    margin-right: 3%;
+    margin-left: 3%;
 }
 
 .tenet > h4 {
